EPBDS-3273 Updated JVM configurations in Eclipse site.