@@ -25,7 +25,7 @@ public class StudioLaunchTarget extends ALaunchTarget {
 
     static public final String MAIN_CLASS_NAME = "org.openl.rules.webstudio.util.StartTomcat";
 
-    static public final String VM_ARGS = "-Xms256M -Xmx1024M"
+    static public final String VM_ARGS = "-Xms256M -Xmx1024M -XX:+UseParallelOldGC -XX:MaxPermSize=512M -XX:PermSize=128M"
         + " -D" + IRulesLaunchConstants.LOCAL_WORKSPACE_PROPERTY_NAME + "=${workspace_loc}"
         + " -D" + IRulesLaunchConstants.START_PROJECT_PROPERTY_NAME + "=";
 
